<resources>
    <string name="app_name">MyMessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Артём</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_mail">some_mail@gmail.com</string>
    <string name="settings_label_mail">Нажмите, чтобы изменить</string>
    <string name="settings_default_login">suckmymemes</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_defult_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>


    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_password">Проверка подлинности</string>
    <string name="register_text_enter_password_from">Введите пароль от аккаунта</string>
    <string name="register_hint_default_password">your_password_123</string>
    <string name="register_title_your_login">Введите ваш логин</string>
    <string name="register_toast_enter_login">Введите логин</string>
    <string name="register_login_hint">your_login</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия (необязательно)</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="string_hint_input_login">Имя пользователя</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создать группу</string>
</resources>