<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterPasswordFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:src="@drawable/ic_register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_register_image" />

    <TextView
        android:id="@+id/register_text_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="@dimen/app_small_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normalText"
        android:text="@string/register_text_enter_password"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_password_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:gravity="center"
        android:layout_margin="@dimen/app_small_margin"
        android:text="@string/register_text_enter_password_from"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_password"/>

    <EditText
        style="@style/editTextPassword"
        android:layout_width="wrap_content"
        android:id="@+id/register_input_password"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/register_hint_default_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_password_from" />

</androidx.constraintlayout.widget.ConstraintLayout>